--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,117 @@
 html,
 body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
-  background-color: purple;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+
   .main-Container {
-    
+    width: 90%;
+    height: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border: 1px white solid;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 -2px 6px 1px rgba(237,237,236,1);
+
+    .news-letter-main-container {
+      width: 100%;
+      height: 80%;
+
+      .news-container {
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+          scrollbar {
+          display: none;
+          }
+      }
+
+      .news-main-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        padding: 20px 0;
+        margin-bottom: 4px;
+        // overflow-y: scroll;
+      }
+
+      .news-image-container {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 50%;
+
+        .image-placeholder {
+          width: 180px;
+          height: 100px;
+          background-color: #d8d8d8;
+        }
+      }
+
+
+      .news-description-container {
+        width: 100%;
+        height: 45%;
+        display: flex;
+        margin-bottom: 10px;
+        flex-direction: column;
+        border: 1px white solid;
+      }
+    }
+
+    .susbscribe-main-container {
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 30%;
+      justify-content: space-around;
+      border-radius: 5px;
+      background-color: white;
+      box-shadow: 0 -4px 0 0 #E3E1E0;
+      padding: 10px 0;
+
+      input {
+        background-color: #f5f5f5;
+        border: 1px solid #FCFCFC;
+
+        &::placeholder {
+          padding: 0 6px;
+          color: #A0A0A3;
+        }
+      }
+
+      input,
+      button {
+        max-width: 300px;
+        width: 80%;
+        height: 40px;
+        border-radius: 5px;
+      }
+      
+      button {
+        background-color: #4292F4;
+        color: white;
+        border: 1px solid #1073ec;
+      }
+    }
   }
 }
