--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,7 +20,7 @@ body {
     border: 1px white solid;
     border-radius: 5px;
     background-color: white;
-    box-shadow: 0 -2px 6px 1px rgba(237,237,236,1);
+    box-shadow: 0 -2px 6px 1px rgba(237, 237, 236, 1);
 
     .news-letter-main-container {
       width: 100%;
@@ -36,10 +36,6 @@ body {
         &::-webkit-scrollbar {
           display: none;
         }
-
-          scrollbar {
-          display: none;
-          }
       }
 
       .news-main-container {
@@ -65,7 +61,6 @@ body {
         }
       }
 
-
       .news-description-container {
         width: 100%;
         height: 45%;
@@ -73,6 +68,63 @@ body {
         margin-bottom: 10px;
         flex-direction: column;
         border: 1px white solid;
+      }
+
+      .news-check-container {
+        label {
+          position: relative;
+
+          input {
+            position: absolute;
+            width: 0;
+            cursor: pointer;
+            height: 0;
+            opacity: 0;
+
+            &:checked {
+              background-color: blue;
+            }
+          }
+
+          span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 30px;
+            width: 30px;
+            border-radius: 100%;
+            background-color: grey;
+
+            &::after {
+              content: "";
+              position: absolute;
+              display: none;
+              left: 9px;
+              top: 5px;
+              width: 5px;
+              height: 10px;
+              border: solid white;
+              border-width: 0 3px 3px 0;
+              -webkit-transform: rotate(45deg);
+              -ms-transform: rotate(45deg);
+              transform: rotate(45deg);
+            }
+          }
+
+          &:hover input ~ span {
+            border-color: #4292f4;
+          }
+
+          &:checked input ~ span {
+            // I will keep going with this 
+            background-color: #4292f4;
+          }
+
+          input:checked ~ span::after {
+            display: block;
+            background-color: #4292f4;
+          }
+        }
       }
     }
 
@@ -86,16 +138,16 @@ body {
       justify-content: space-around;
       border-radius: 5px;
       background-color: white;
-      box-shadow: 0 -4px 0 0 #E3E1E0;
+      box-shadow: 0 -4px 0 0 #e3e1e0;
       padding: 10px 0;
 
       input {
         background-color: #f5f5f5;
-        border: 1px solid #FCFCFC;
+        border: 1px solid #fcfcfc;
 
         &::placeholder {
           padding: 0 6px;
-          color: #A0A0A3;
+          color: #a0a0a3;
         }
       }
 
@@ -106,11 +158,23 @@ body {
         height: 40px;
         border-radius: 5px;
       }
-      
+
       button {
-        background-color: #4292F4;
+        background-color: #4292f4;
         color: white;
         border: 1px solid #1073ec;
+      }
+
+      .subscribe-check-container {
+        display: flex;
+        font-size: 1px;
+        flex-direction: column-reverse;
+        align-items: center;        
+
+        input {
+          width: 15px;
+          height: 15px;
+        }
       }
     }
   }
