--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -73,56 +73,52 @@ body {
       .news-check-container {
         label {
           position: relative;
-
-          input {
-            position: absolute;
-            width: 0;
-            cursor: pointer;
-            height: 0;
-            opacity: 0;
-
-            &:checked {
-              background-color: blue;
-            }
-          }
+          padding-left: 35px;
+          margin-bottom: 12px;
+          font-size: 22px;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
 
           span {
             position: absolute;
             top: 0;
             left: 0;
-            height: 30px;
-            width: 30px;
             border-radius: 100%;
-            background-color: grey;
+            height: 25px;
+            width: 25px;
+            background-color: #eee;
 
             &::after {
               content: "";
               position: absolute;
               display: none;
+            }
+          }
+
+          input {
+            position: absolute;
+            opacity: 0;
+            height: 0;
+            width: 0;
+
+            &:checked ~ span {
+              border: 1px solid #4292f4;
+            }
+
+            &:checked ~ span::after {
+              display: block;
               left: 9px;
               top: 5px;
               width: 5px;
               height: 10px;
-              border: solid white;
+              border: solid #4292f4;
               border-width: 0 3px 3px 0;
               -webkit-transform: rotate(45deg);
               -ms-transform: rotate(45deg);
               transform: rotate(45deg);
             }
-          }
-
-          &:hover input ~ span {
-            border-color: #4292f4;
-          }
-
-          &:checked input ~ span {
-            // I will keep going with this 
-            background-color: #4292f4;
-          }
-
-          input:checked ~ span::after {
-            display: block;
-            background-color: #4292f4;
           }
         }
       }
@@ -169,7 +165,7 @@ body {
         display: flex;
         font-size: 1px;
         flex-direction: column-reverse;
-        align-items: center;        
+        align-items: center;
 
         input {
           width: 15px;
