--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,8 +24,18 @@ body {
     box-shadow: 0 -2px 6px 1px rgba(237, 237, 236, 1);
 
     .news-letter-main-container {
+      .news-letter-title {
+        margin: 10px 0;
+      }
+
+      .sub-title {
+        margin: 0;
+      }
+
       @media (min-width: 768px) {
         .news-container {
+          margin-top: 20px;
+
           .news-main-container {
             flex-direction: row;
             padding: 0 0 0 30px;
@@ -52,6 +62,7 @@ body {
               .news-title {
                 font-size: 27px;
               }
+
               .news-description {
                 font-size: 21px;
                 letter-spacing: 1px;
@@ -59,6 +70,62 @@ body {
             }
 
             .news-check-container {
+              @media (min-width: 768px) {
+                width: 30%;
+                padding-right: 18px;
+
+                label {
+                  position: relative;
+                  padding-left: 35px;
+                  margin-bottom: 12px;
+                  font-size: 22px;
+                  -webkit-user-select: none;
+                  -moz-user-select: none;
+                  -ms-user-select: none;
+                  user-select: none;
+
+                  span {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    border-radius: 100%;
+                    height: 50px;
+                    width: 50px;
+                    background-color: #eee;
+
+                    &::after {
+                      content: "";
+                      position: absolute;
+                      display: none;
+                    }
+                  }
+
+                  input {
+                    position: absolute;
+                    opacity: 0;
+                    height: 0;
+                    width: 0;
+
+                    &:checked ~ span {
+                      border: 2px solid #4292f4;
+                    }
+
+                    &:checked ~ span::after {
+                      display: block;
+                      left: 20px;
+                      top: 14px;
+                      width: 8px;
+                      height: 15px;
+                      border: solid #4292f4;
+                      border-width: 0 3px 3px 0;
+                      -webkit-transform: rotate(45deg);
+                      -ms-transform: rotate(45deg);
+                      transform: rotate(45deg);
+                    }
+                  }
+                }
+              }
+
               display: flex;
               height: 100%;
               width: 15%;
@@ -174,6 +241,16 @@ body {
     }
 
     .susbscribe-main-container {
+      @media (min-width: 768px) {
+        input,
+        button {
+          max-width: unset;
+          width: 65%;
+          height: 25px;
+          border-radius: 5px;
+        }
+      }
+
       margin-top: 10px;
       width: 100%;
       display: flex;
@@ -202,6 +279,14 @@ body {
         width: 80%;
         height: 25px;
         border-radius: 5px;
+
+        @media (min-width: 768px) {
+          max-width: unset;
+          width: 65%;
+          height: 25%;
+          font-size: 20px;
+          border-radius: 5px;
+        }
       }
 
       button {
@@ -216,6 +301,10 @@ body {
         flex-direction: column-reverse;
         align-items: center;
 
+        @media (min-width: 768px) {
+          flex-direction: row;
+        }
+
         input {
           width: 15px;
           height: 15px;
@@ -224,4 +313,3 @@ body {
     }
   }
 }
-
