Finished design, now I want to implement the modal popup

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
+* {
+  font-family: 'Roboto', sans-serif;
+}
 
 html,
 body {
@@ -300,6 +305,7 @@ body {
         background-color: #4292f4;
         color: white;
         border: 1px solid #1073ec;
+        box-shadow: 1px 0px 5px 0px rgba(16,115,236);
       }
 
       .subscribe-check-container {
