Added Toggle function

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -305,7 +305,7 @@ body {
         background-color: #4292f4;
         color: white;
         border: 1px solid #1073ec;
-        box-shadow: 1px 0px 5px 0px rgba(16,115,236);
+        box-shadow: 1px 0 5px 0 rgba(16, 115, 236);
       }
 
       .subscribe-check-container {
