--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -4,6 +4,12 @@
   font-family: 'Roboto', sans-serif;
 }
 
+p,
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
   margin: 0;
@@ -18,6 +24,7 @@ body {
 
   .main-Container {
     width: 90%;
+    position: relative;
     height: 95%;
     display: flex;
     flex-direction: column;
@@ -297,7 +304,6 @@ body {
           width: 65%;
           height: 25%;
           font-size: 20px;
-          border-radius: 5px;
         }
       }
 
@@ -324,5 +330,43 @@ body {
         }
       }
     }
+  }
+
+  .modal-main-container {
+    display: none;
+
+    .modal-button {
+      max-width: 300px;
+      width: 80%;
+      height: 40px;
+      font-size: 20px;
+      border-radius: 8px;
+      background-color: white;
+      color: #4292f4;
+      box-shadow: 1px 0 5px 0 rgb(246, 246, 246);
+
+      @media (min-width: 768px) {
+        max-width: unset;
+        width: 65%;
+        height: 25%;
+        font-size: 20px;
+      }
+    }
+  }
+
+  .flex {
+    display: flex;
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    border-radius: 8px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #4292f4;
+    z-index: 2;
   }
 }
